Fixed a css bug with the Nav not showing on lg screens

--- a/src/components/organisms/nav/nav.module.scss
+++ b/src/components/organisms/nav/nav.module.scss
@@ -27,6 +27,10 @@
 
   &--hide {
     animation: slideUp 0.5s forwards;
+
+    @include respond(lg) {
+      animation: unset;
+    }
   }
 
   &__list {
